<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sender_picker_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/sender_picker_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/sender_picker_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:title="@string/group_senders"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </org.fossify.commons.views.MyAppBarLayout>

    <RelativeLayout
        android:id="@+id/sender_picker_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <org.fossify.commons.views.MyEditText
            android:id="@+id/sender_picker_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:background="@android:color/transparent"
            android:hint="@string/search_senders"
            android:inputType="text"
            android:minHeight="@dimen/normal_icon_size"
            android:textSize="@dimen/big_text_size" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/sender_picker_selected_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sender_picker_search"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:alpha="0.7"
            android:paddingBottom="@dimen/small_margin"
            android:textSize="@dimen/normal_text_size"
            tools:text="2 selected" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/sender_picker_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sender_picker_selected_count"
            android:indeterminate="true"
            android:visibility="gone"
            app:hideAnimationBehavior="outward"
            app:showAnimationBehavior="inward"
            tools:visibility="visible" />

        <org.fossify.commons.views.MyTextView
            android:id="@+id/sender_picker_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sender_picker_progress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/bigger_margin"
            android:alpha="0.8"
            android:gravity="center"
            android:paddingStart="@dimen/activity_margin"
            android:paddingEnd="@dimen/activity_margin"
            android:text="@string/no_short_code_senders"
            android:textSize="@dimen/bigger_text_size"
            android:textStyle="italic"
            android:visibility="gone" />

        <org.fossify.commons.views.MyRecyclerView
            android:id="@+id/sender_picker_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/sender_picker_progress"
            android:clipToPadding="false"
            android:overScrollMode="ifContentScrolls"
            android:scrollbars="none"
            app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager" />
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
