<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thread_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.fossify.commons.views.MyAppBarLayout
        android:id="@+id/thread_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/thread_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:menu="@menu/menu_thread"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

        <LinearLayout
            android:id="@+id/thread_search_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="@dimen/medium_margin"
            android:paddingTop="@dimen/small_margin"
            android:paddingEnd="@dimen/medium_margin"
            android:paddingBottom="@dimen/small_margin"
            android:visibility="gone"
            tools:visibility="visible">

            <org.fossify.commons.views.MyEditText
                android:id="@+id/thread_search_query"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/search_in_conversation"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/normal_text_size" />

            <org.fossify.commons.views.MyTextView
                android:id="@+id/thread_search_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:alpha="0.7"
                android:minWidth="40dp"
                android:textSize="@dimen/smaller_text_size"
                tools:text="1/12" />

            <ImageView
                android:id="@+id/thread_search_prev"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/previous_match"
                android:padding="@dimen/small_margin"
                android:src="@drawable/ic_arrow_up_vector" />

            <ImageView
                android:id="@+id/thread_search_next"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/next_match"
                android:padding="@dimen/small_margin"
                android:src="@drawable/ic_arrow_down_vector" />

            <ImageView
                android:id="@+id/thread_search_close"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/hide_search"
                android:padding="@dimen/small_margin"
                android:src="@drawable/ic_cross_vector" />
        </LinearLayout>

    </org.fossify.commons.views.MyAppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thread_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <include
            layout="@layout/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/thread_add_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/selected_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/confirm_manage_contacts"
                android:layout_width="@dimen/normal_icon_size"
                android:layout_height="@dimen/normal_icon_size"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="@dimen/small_margin"
                android:src="@drawable/ic_check_vector" />

            <View
                android:id="@+id/message_divider_one"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_below="@+id/selected_contacts"
                android:background="@color/divider_grey"
                android:importantForAccessibility="no" />

            <org.fossify.commons.views.MyAutoCompleteTextView
                android:id="@+id/add_contact_or_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_icon_size"
                android:layout_below="@+id/message_divider_one"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_toStartOf="@+id/confirm_inserted_number"
                android:background="@android:color/transparent"
                android:completionThreshold="2"
                android:gravity="center_vertical"
                android:hint="@string/add_contact_or_number"
                android:inputType="textCapWords"
                android:textSize="@dimen/big_text_size" />

            <ImageView
                android:id="@+id/confirm_inserted_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/add_contact_or_number"
                android:layout_alignBottom="@+id/add_contact_or_number"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/medium_margin"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/confirm_selection"
                android:paddingStart="@dimen/medium_margin"
                android:paddingEnd="@dimen/medium_margin"
                android:src="@drawable/ic_check_vector"
                android:visibility="gone" />

            <View
                android:id="@+id/message_divider_two"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_below="@+id/add_contact_or_number"
                android:background="@color/divider_grey"
                android:importantForAccessibility="no" />

        </RelativeLayout>

        <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller
            android:id="@+id/thread_messages_fastscroller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/short_code_holder"
            app:layout_constraintTop_toBottomOf="@id/thread_add_contacts"
            app:supportSwipeToRefresh="true">

            <org.fossify.commons.views.MyRecyclerView
                android:id="@+id/thread_messages_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:overScrollMode="ifContentScrolls"
                android:paddingTop="@dimen/big_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:scrollbars="none"
                app:layoutManager="org.fossify.commons.views.MyLinearLayoutManager"
                app:stackFromEnd="true"
                tools:itemCount="3"
                tools:listitem="@layout/item_message" />

        </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>

        <org.fossify.commons.views.MyFloatingActionButton
            android:id="@+id/scroll_to_bottom_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:src="@drawable/ic_arrow_down_vector"
            android:visibility="invisible"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@id/thread_messages_fastscroller"
            app:layout_constraintEnd_toEndOf="@id/thread_messages_fastscroller"
            tools:ignore="ContentDescription" />

        <include
            android:id="@+id/short_code_holder"
            layout="@layout/layout_invalid_short_code_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/message_holder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thread_messages_fastscroller"
            tools:visibility="visible" />

        <include
            android:id="@+id/message_holder"
            layout="@layout/layout_thread_send_message_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
